Forgot text color white for input

--- a/src/Comps.css/MainPage.css
+++ b/src/Comps.css/MainPage.css
@@ -18,6 +18,7 @@
 
  
 .input {
+     color: white;
      font-size: 15px;
      /*background-color: rgb(53, 50, 50);*/
      background: radial-gradient(
