--- a/src/Comps.css/MainPage.css
+++ b/src/Comps.css/MainPage.css
@@ -31,3 +31,57 @@
      border-radius: 20px;
      padding-left: 25px;
 }
+
+@media (max-width: 844px) {
+    .body-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 45vh;
+        text-align: center;
+        font-style: bold;
+        font-size: 30px;
+        margin: 0 auto;
+        color: white;
+        position: relative;
+        background: radial-gradient(
+            circle closest-side, 
+            rgb(39, 70, 57),
+            black );      
+    }
+    .input {
+        color: white;
+        font-size: 15px;
+        /*background-color: rgb(53, 50, 50);*/
+        background: radial-gradient(
+           circle, 
+           rgb(30, 35, 32),
+           rgb(43, 43, 42)); 
+        width: 340px;
+        height: 40px;
+        border: 1px solid rgb(82, 80, 80);
+        border-radius: 20px;
+        padding-left: 25px;
+   }
+ }
+ 
+ @media (max-width: 667px) {
+    .body-container {
+        display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 55vh;
+    text-align: center;
+    font-style: bold;
+    font-size: 30px;
+    margin: o auto;
+    color: white;
+    position: relative;
+    background: radial-gradient(
+        circle closest-side, 
+        rgb(39, 70, 57),
+        black );      
+    }
+ }
